--- a/deploy/demo_nginx.conf
+++ b/deploy/demo_nginx.conf
@@ -6,7 +6,7 @@ server{
     listen 80;
     server_name demo.softjing.com;
     client_max_body_size 100m;
-    set $proj_name demo;
+    set $proj_name backend_demo;
     
     access_log /var/log/nginx/demo.log;
     error_log /var/log/nginx/demo.log;
