--- a/deploy/demo_nginx.conf
+++ b/deploy/demo_nginx.conf
@@ -12,9 +12,13 @@ server{
     error_log /var/log/nginx/demo.log;
 
     location /doc {
+
         alias /pypro/$proj_name/doc/build/html;
-        expires 1d;
         access_log off;
+        if ($request_filename ~ .*\.(htm|html)$)
+        {
+               add_header Cache-Control no-cache;
+        }
     }
 
     location /static {
